# textual-spinbox

./: README.md  pyproject.toml
src/textual_spinbox/: __init__.py  demo.py  spinbox.py  spinbox.tcss
