[project]
name = "textual-spinbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frisco Rose", email = "friscorose@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.87.1",
]

[project.scripts]
spinbox_demo = "textual_spinbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
